2009-07-18  Jan Michael Alonzo  <jmalonzo@webkit.org>

        [Gtk] Skip tests that require new expected results, eventSender
        and editing callbacks DRT support. Unreviewed.

        * platform/gtk/Skipped:

2009-07-18  Jeremy Orlow  <jorlow@chromium.org>

        Rubber stamped by Adam Barth.

        Revert https://bugs.webkit.org/show_bug.cgi?id=27383
        https://bugs.webkit.org/show_bug.cgi?id=27407

        Revert Jens' patch.  I believe he forgot to include a file.

        * fast/dom/HTMLDataGridElement/DataGridColumns-basic-expected.txt:
        * fast/dom/HTMLDataGridElement/DataGridColumns-basic.html:
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom-attributes.html:
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom-expected.txt:
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom.html:
        * fast/dom/HTMLDataGridElement/DataGridDataSource-basic.html:

2009-07-17  Daniel Bates  <dbates@intudata.com>

        Reviewed by Adam Barth.
        
        https://bugs.webkit.org/show_bug.cgi?id=27405

        Tests that HTML entities that contain an invalid entity, such as an 
        unknown named entity, are properly handled.

        * http/tests/security/xssAuditor/link-onclick-ampersand-expected.txt: Added.
        * http/tests/security/xssAuditor/link-onclick-ampersand.html: Added.
        * http/tests/security/xssAuditor/javascript-link-ampersand-expected.txt: Added.
        * http/tests/security/xssAuditor/javascript-link-ampersand.html: Added.

2009-07-17  Mads Ager  <ager@chromium.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=27403
        Add test case for https://bugs.webkit.org/show_bug.cgi?id=27394:
        properties on a window object should be accessible after the frame
        of the window object has navigated to another site.

        * fast/dom/Window/window-access-after-navigation-expected.txt: Added.