@@ -1,3 +1,15 @@
+2009-07-18  Jan Michael Alonzo  <jmalonzo@webkit.org>
+
+        https://bugs.webkit.org/show_bug.cgi?id=27145
+        [Gtk][REGRESSION] subframe-navigate-during-main-frame-load.html fails after r45615
+
+        Reviewed by Gustavo Noronha.
+
+        Normalize file URLs.
+
+        * DumpRenderTree/gtk/DumpRenderTree.cpp:
+        (dumpHistoryItem):
+
 2009-07-17  Peter Kasting  <pkasting@google.com>
 
         Reviewed by David Kilzer.
