@@ -1,5 +1,14 @@
 2009-07-18  Jan Michael Alonzo  <jmalonzo@webkit.org>
 
+        https://bugs.webkit.org/show_bug.cgi?id=27145
+        [Gtk][REGRESSION] subframe-navigate-during-main-frame-load.html fails after r45615
+
+        Reviewed by Gustavo Noronha.
+
+        * platform/gtk/Skipped:
+
+2009-07-18  Jan Michael Alonzo  <jmalonzo@webkit.org>
+
         [Gtk] Skip tests that require new expected results, eventSender
         and editing callbacks DRT support. Unreviewed.
 
